Refactor frasesdeldiego.html for better layout
Updated the HTML structure and styles for the 'Frases del Diego' page, including responsive design and improved layout.

--- a/pages/frasesdeldiego.html
+++ b/pages/frasesdeldiego.html
@@ -1,41 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frases del Diego</title>
-    <link rel="icon" href="../images/logo.webp" type="image/x-icon">
+    <link rel="icon" href="images/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz,wght@6..72,200;6..72,300;6..72,400;6..72,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/navbar.css">
-    <link rel="stylesheet" type="text/css" href="../css/frasesdeldiego.css">
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz,wght@6..72,200;6..72,300;6..72,400;6..72,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="main-container">
-            <a href="../proyectos.html"><h1>Frases del Diego</h1></a>
-            <div class="contenedor-frase">
-                <p id="fraseDiego"></p>
+    <!-- Fondo animado con partículas -->
+    <div class="particles-container" id="particles"></div>
+    
+    <!-- Elementos decorativos del fondo -->
+    <div class="stadium-elements">
+        <div class="field-lines"></div>
+        <div class="goal-left"></div>
+        <div class="goal-right"></div>
+    </div>
+    
+    <!-- Contenido principal -->
+    <div class="main-container">
+        <header class="header">
+            <a href="proyectos.html" class="back-link">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15 18L9 12L15 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Volver
+            </a>
+            <h1>Frases del Diego</h1>
+            <div class="maradona-icon">
+                <div class="number-10">10</div>
             </div>
-            <div class="contenedor-boton">
-                <button id="cambiar-frase" onclick="cambiarFrase()">
-                    Cambiar Frase
+        </header>
+
+        <main class="content">
+            <div class="quote-container">
+                <div class="quote-card" id="quoteCard">
+                    <div class="quote-icon">⚽</div>
+                    <p id="fraseDiego" class="quote-text">"La pelota no se mancha"</p>
+                    <div class="signature">- Diego Armando Maradona</div>
+                </div>
+            </div>
+
+            <div class="button-container">
+                <button id="cambiar-frase" class="action-button">
+                    <span class="button-text">Cambiar Frase</span>
+                    <span class="button-icon">⚽</span>
                 </button>
             </div>
-            <img id="diego01" src="../images/diego-maradona-10.png" alt="Diego Maradona" class="background-image-01">
-            <img id="diego02" src="../images/1575581231301Maradona.png" alt="Diego Maradona" class="background-image-02">
-            <img id="diego03" src="../images/Imagen-Gol-Maradona-campeonato-4.webp" alt="Diego Maradona" class="background-image-04">
-            <img id="diego03" src="../images/tapa.png" alt="Diego Maradona" class="background-image-03">
-
-        </div>
+        </main>
     </div>
 
-    <script src="../js/frasesdeldiego.js"></script>
-</body>
+    <!-- Imágenes decorativas -->
+    <div class="maradona-images">
+        <img src="images/diego-maradona-10.png" alt="Diego Maradona" class="maradona-img img-1">
+        <img src="images/1575581231301Maradona.png" alt="Diego Maradona" class="maradona-img img-2">
+        <img src="images/Imagen-Gol-Maradona-campeonato-4.webp" alt="Diego Maradona" class="maradona-img img-3">
+        <img src="images/tapa.png" alt="Diego Maradona" class="maradona-img img-4">
+    </div>
 
+    <script src="js/script.js"></script>
+</body>
 </html>
+
