--- a/pages/frasesdeldiego.html
+++ b/pages/frasesdeldiego.html
@@ -7,10 +7,12 @@
     <link rel="icon" href="../images/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz,wght@6..72,200;6..72,300;6..72,400;6..72,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link rel="stylesheet" type="text/css" href="../css/frasesdeldiego.css">
-    <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz,wght@6..72,200;6..72,300;6..72,400;6..72,500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,10 +27,11 @@
                     Cambiar Frase
                 </button>
             </div>
-            <img id="diego01" src="../images/diego-maradona-10.png" alt="Diego Maradona celebrando" class="background-image-01">
-            <img id="diego02" src="../images/1575581231301Maradona.png" alt="Diego Maradona de frente" class="background-image-02">
-            <img id="diego03" src="../images/Imagen-Gol-Maradona-campeonato-4.webp" alt="Diego Maradona en jugada de gol" class="background-image-04">
-            <img id="diego04" src="../images/tapa.png" alt="Primer plano de Diego Maradona" class="background-image-03">
+            <img id="diego01" src="../images/diego-maradona-10.png" alt="Diego Maradona" class="background-image-01">
+            <img id="diego02" src="../images/1575581231301Maradona.png" alt="Diego Maradona" class="background-image-02">
+            <img id="diego03" src="../images/Imagen-Gol-Maradona-campeonato-4.webp" alt="Diego Maradona" class="background-image-04">
+            <img id="diego03" src="../images/tapa.png" alt="Diego Maradona" class="background-image-03">
+
         </div>
     </div>
 
