Enhance SEO and social media meta tags in index.html
Added improved SEO meta tags and Open Graph tags for better visibility and sharing on social media.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,41 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
 
-  <title>Ariel Fernández: Full Stack Web Developer in PHP</title>
+   <!-- META TAGS SEO MEJORADOS -->
+  <title>Ariel Fernández - Desarrollador Full Stack Web PHP | Portfolio Profesional</title>
+  <meta name="description" content="Desarrollador Full Stack Web especializado en PHP. Portfolio profesional con proyectos destacados y experiencia en desarrollo web.">
+  <meta name="keywords" content="desarrollador full stack, PHP, desarrollador web, portfolio, programador, JavaScript, MySQL, Laravel">
+  <meta name="author" content="Ariel Fernández">
+  <meta name="robots" content="index, follow">
+  
+  <!-- OPEN GRAPH / SOCIAL MEDIA META TAGS -->
+  <meta property="og:title" content="Ariel Fernández - Desarrollador Full Stack Web PHP">
+  <meta property="og:description" content="Desarrollador Full Stack Web especializado en PHP. Portfolio profesional con proyectos destacados.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://oneeyedbastard.github.io/">
+  <meta property="og:image" content="https://oneeyedbastard.github.io/images/og-image.jpg">
+  
+  <!-- TWITTER CARD META TAGS -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Ariel Fernández - Desarrollador Full Stack Web PHP">
+  <meta name="twitter:description" content="Desarrollador Full Stack Web especializado en PHP. Portfolio profesional.">
+  <meta name="twitter:image" content="https://oneeyedbastard.github.io/images/twitter-image.jpg">
+  
+  <!-- SCHEMA MARKUP PARA PERSONA (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Ariel Fernández",
+    "jobTitle": "Full Stack Web Developer",
+    "url": "https://oneeyedbastard.github.io/",
+    "sameAs": [
+      "https://www.linkedin.com/in/oneeyedbastard/",
+      "https://github.com/oneeyedbastard"
+    ],
+    "knowsAbout": ["PHP", "JavaScript", "HTML", "CSS", "MySQL", "Laravel", "Desarrollo Web"]
+  }
+  </script>
 </head>
 
 <body>
@@ -62,3 +96,4 @@
 </body>
 
 </html> 
+
