Fix HTML encoding issues in proyectos.html

--- a/proyectos.html
+++ b/proyectos.html
@@ -67,7 +67,7 @@
     
     <div class="rectangulo-negro">
         <div class="proyecto-moviez">
-            <h2>Moviez</h2>
+            <h2><a href="pages/moviez.html>Moviez</a></h2>
             
             <p>Este proyecto, originalmente parte de ARGENTINA PROGRAMA, se ha personalizado con mejoras y extensiones. Diseñado con JavaScript, Bootstrap y CSS, utiliza la API de The Movie Database (TMDb) como su fuente principal de datos sobre películas. Permite a los usuarios explorar películas populares, las mejor valoradas y los próximos estrenos, así como buscar películas por director o actor. Al seleccionar una película, muestra un modal con detalles esenciales como título, descripción, calificación y año de estreno. Esta interfaz simplificada está orientada a facilitar la exploración y acceso a información relevante sobre películas mediante la integración de la API de TMDb."</p>           
             <div class="container-buttons">
@@ -88,3 +88,4 @@
   <script src="js/proyectos.js"></script>
 </body>
 </html>
+
