Update contact information in contacto.html
Updated personal information and email address in the contact page.

--- a/contacto.html
+++ b/contacto.html
@@ -5,9 +5,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- ESTILOS NAVBAR -->
   <link rel="stylesheet" type="text/css" href="css/navbar.css">
-  <!-- ESTILOS CONTACTO -->
   <link rel="stylesheet" type="text/css" href="css/contacto.css">
   <link rel="icon" href="images/icon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,20 +41,25 @@
         Como desarrollador fullstack, mi experiencia abarca el desarrollo en PHP utilizando el popular framework Laravel
         para la construcción de aplicaciones web robustas y eficientes. Mi conocimiento en JavaScript, CSS y HTML me
         permite diseñar interfaces interactivas y atractivas, optimizando la experiencia del usuario en cada proyecto.
-
+      </p>
+      <p>
         Mi destreza en el manejo de bases de datos complementa mi habilidad técnica, permitiéndome crear sistemas
         sólidos y escalables. He trabajado con distintos tipos de bases de datos, asegurando un almacenamiento eficaz y
         seguro de la información.
-
+      </p>
+      <p>
         Mi enfoque integral en el desarrollo web abarca desde la implementación de lógica de backend con PHP y Laravel
         hasta la construcción de interfaces dinámicas con JavaScript, CSS y HTML. Esta versatilidad me permite ofrecer
         soluciones completas, desde la conceptualización hasta la implementación y el despliegue final del producto.
-
+      </p>
+      <p>
         Con un sólido dominio de las tecnologías mencionadas y una comprensión profunda de la interacción entre ellas,
         estoy capacitado para abordar desafíos complejos y materializar ideas innovadoras en proyectos web funcionales y
         atractivos para los usuarios finales.
       </p>
-
+      <p>
+        Actualmente, estoy cursando la carrera de Analista Programador Universitario en la UNLP (Universidad Nacional de La Plata) desde 2024.
+      </p>
     </div>
   </div>
   <div class="buttons">
@@ -64,14 +67,13 @@
     <button class="contact-btn" onclick="translateToGerman()">DEU</button>
   </div>
   <div class="email-btn">
-    <button class="contact-btn" onclick="location.href = 'mailto:eingutertagzumfliegen@gmail.com'">E-MAIL</button>
+    <button class="contact-btn" onclick="location.href = 'mailto:oneeyedbastard@outlook.com.ar'">E-MAIL</button>
   </div>
 
 
   
 <div class="cuadrado-negro" id="codigoPHP">
-  <!-- Contenido generado dinámicamente -->
-</div>
+  </div>
 
 
 
@@ -79,5 +81,6 @@
 
   <script src="js/navbar.js"></script>
 </body>
+
 
 </html>
