Revise project descriptions in proyectos.html
Updated project descriptions and enhanced content for clarity and detail.

--- a/proyectos.html
+++ b/proyectos.html
@@ -58,8 +58,16 @@
         <div class="proyecto-clasico">
             <h2><a href="pages/clasicos.html">Clásico de La Plata</a></h2>
            
-            <p>Esta plataforma de análisis de encuentros históricos entre Estudiantes y Gimnasia ofrece a los seguidores del fútbol la posibilidad de explorar detalladamente la rica historia de enfrentamientos entre estos equipos. Con funciones de filtrado intuitivas, los usuarios pueden investigar y examinar partidos pasados por fecha, tipo de torneo, equipos involucrados y estadios, brindando una experiencia interactiva para revivir la emocionante rivalidad entre Gimnasia y Estudiantes.</p>
-           
+            <p>
+                Este proyecto personal, iniciado originalmente en JavaScript, fue reescrito y escalado utilizando 
+                <strong>Laravel y Breeze</strong> para robustecer su backend y funcionalidades. 
+                La idea de un simple filtro de partidos evolucionó hasta convertirse en un profundo trabajo de investigación.
+            </p>
+            <p>
+                Esta nueva etapa implicó la recopilación y carga de una base de datos detallada. La plataforma permite a los usuarios filtrar 
+                por fecha, torneo y estadio, ofreciendo un nivel de detalle único para analizar la intensa rivalidad 
+                entre <strong>Gimnasia y Estudiantes</strong>.
+            </p>
             <div class="container-buttons">
               <button class="access-button" onclick="window.location.href='pages/clasicos.html'">INGRESAR</button>
               <button onclick="translateText('clasico', 'english')">ENG</button>
