--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,6 @@
 <html lang="es">
 
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/navbar.css">
@@ -24,63 +23,49 @@
     </div>
 
     <nav class="nav">
-
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
         <li><a href="proyectos.html">Projects</a></li>
         <li><a href="contacto.html">About me</a></li>
-        <li><a href="#"></a></li>
       </ul>
-
     </nav>
   </header>
 
   <div class="rectangulo-negro">
     <div class="sobre-mi">
       <p>
-        Como desarrollador fullstack, mi experiencia abarca el desarrollo en PHP utilizando el popular framework Laravel
-        para la construcción de aplicaciones web robustas y eficientes. Mi conocimiento en JavaScript, CSS y HTML me
-        permite diseñar interfaces interactivas y atractivas, optimizando la experiencia del usuario en cada proyecto.
+        Como desarrollador fullstack, tengo experiencia en el desarrollo con PHP y el framework Laravel, que utilizo para crear aplicaciones web robustas y eficientes. Combino estos conocimientos con JavaScript, CSS y HTML para diseñar interfaces atractivas e interactivas, siempre buscando optimizar la experiencia del usuario en cada proyecto.
       </p>
       <p>
-        Mi destreza en el manejo de bases de datos complementa mi habilidad técnica, permitiéndome crear sistemas
-        sólidos y escalables. He trabajado con distintos tipos de bases de datos, asegurando un almacenamiento eficaz y
-        seguro de la información.
+        También trabajo con bases de datos, lo que me permite construir sistemas sólidos y escalables, asegurando que la información se almacene de forma segura y eficaz.
       </p>
       <p>
-        Mi enfoque integral en el desarrollo web abarca desde la implementación de lógica de backend con PHP y Laravel
-        hasta la construcción de interfaces dinámicas con JavaScript, CSS y HTML. Esta versatilidad me permite ofrecer
-        soluciones completas, desde la conceptualización hasta la implementación y el despliegue final del producto.
+        Mi enfoque abarca tanto el desarrollo del backend con PHP y Laravel, como la creación de interfaces dinámicas en el frontend. Esto me permite ofrecer soluciones completas, desde la planificación inicial hasta el despliegue final.
       </p>
       <p>
-        Con un sólido dominio de las tecnologías mencionadas y una comprensión profunda de la interacción entre ellas,
-        estoy capacitado para abordar desafíos complejos y materializar ideas innovadoras en proyectos web funcionales y
-        atractivos para los usuarios finales.
+        Con un buen manejo de estas tecnologías y entendiendo cómo se relacionan entre sí, me preparo para enfrentar distintos desafíos y transformar ideas en proyectos web funcionales y visualmente atractivos.
       </p>
       <p>
-        Actualmente, estoy cursando la carrera de Analista Programador Universitario en la UNLP (Universidad Nacional de La Plata) desde 2024.
+        Actualmente, estoy cursando la carrera de Analista Programador Universitario en la Universidad Nacional de La Plata (UNLP), desde 2024.
       </p>
     </div>
   </div>
-  <div class="buttons">
-    <button class="contact-btn" onclick="translateToEnglish()">ENG</button>
-    <button class="contact-btn" onclick="translateToGerman()">DEU</button>
+
+  <div class="buttons-container">
+    <div class="language-buttons">
+      <button class="contact-btn" onclick="translateToEnglish()">ENG</button>
+      <button class="contact-btn" onclick="translateToGerman()">DEU</button>
+    </div>
+    
+    <div class="contact-buttons">
+      <button class="contact-btn" onclick="location.href = 'mailto:oneeyedbastard@outlook.com.ar'">E-MAIL</button>
+      <button class="contact-btn" onclick="window.open('https://www.linkedin.com/in/oneeyedbastard/', '_blank')">LINKEDIN</button>
+    </div>
   </div>
-  <div class="email-btn">
-    <button class="contact-btn" onclick="location.href = 'mailto:oneeyedbastard@outlook.com.ar'">E-MAIL</button>
-  </div>
 
-
-  
-<div class="cuadrado-negro" id="codigoPHP">
-  </div>
-
-
+  <div class="cuadrado-negro" id="codigoPHP"></div>
 
   <script src="js/script.js"></script>
-
   <script src="js/navbar.js"></script>
 </body>
-
-
 </html>
