--- a/pages/frasesdeldiego.html
+++ b/pages/frasesdeldiego.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frases del Diego</title>
     <link rel="icon" href="../images/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz,wght@6..72,200;6..72,300;6..72,400;6..72,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/frasesdeldiego.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz,wght@6..72,200;6..72,300;6..72,400;6..72,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="../css/frasesdeldiego.css">
 </head>
 
 <body>
-    <div class="background-layer"></div>
-    <div class="number-10">10</div>
-    
-    <div class="decoration circle-1"></div>
-    <div class="decoration circle-2"></div>
-    
-    <div class="main-container">
-        <a href="../proyectos.html"><h1>Frases del Diego</h1></a>
-        <div class="contenedor-frase">
-            <p id="fraseDiego"></p>
-        </div>
-        <div class="contenedor-boton">
-            <button id="cambiar-frase" onclick="cambiarFrase()">
-                Cambiar Frase
-            </button>
+    <div class="wrapper">
+        <div class="main-container">
+            <a href="../proyectos.html"><h1>Frases del Diego</h1></a>
+            <div class="contenedor-frase">
+                <p id="fraseDiego"></p>
+            </div>
+            <div class="contenedor-boton">
+                <button id="cambiar-frase" onclick="cambiarFrase()">
+                    Cambiar Frase
+                </button>
+            </div>
+            <img id="diego01" src="../images/diego-maradona-10.png" alt="Diego Maradona" class="background-image-01">
+            <img id="diego02" src="../images/1575581231301Maradona.png" alt="Diego Maradona" class="background-image-02">
+            <img id="diego03" src="../images/Imagen-Gol-Maradona-campeonato-4.webp" alt="Diego Maradona" class="background-image-04">
+            <img id="diego03" src="../images/tapa.png" alt="Diego Maradona" class="background-image-03">
+
         </div>
     </div>
 
-    <!-- Imágenes de fondo -->
-    <img src="../images/diego-maradona-10.png" alt="Diego Maradona" class="background-image bg-1">
-    <img src="../images/1575581231301Maradona.png" alt="Diego Maradona" class="background-image bg-2">
-    <img src="../images/Imagen-Gol-Maradona-campeonato-4.webp" alt="Diego Maradona" class="background-image bg-3">
-    <img src="../images/tapa.png" alt="Diego Maradona" class="background-image bg-4">
-
     <script src="../js/frasesdeldiego.js"></script>
 </body>
+
 </html>
+
 
