--- a/proyectos.html
+++ b/proyectos.html
@@ -59,12 +59,11 @@
             <h2><a href="pages/clasicos.html">Clásico de La Plata</a></h2>
            
             <p>
-                Este proyecto personal, iniciado originalmente en JavaScript, fue reescrito y escalado utilizando 
-                <strong>Laravel y Breeze</strong> para robustecer su backend y funcionalidades. 
+                Este proyecto personal, iniciado originalmente en JavaScript, fue reescrito y escalado utilizando Laravel y Breeze para robustecer su backend y funcionalidades. 
                 La idea de un simple filtro de partidos evolucionó hasta convertirse en un profundo trabajo de investigación.           
                 Esta nueva etapa implicó la recopilación y carga de una base de datos detallada. La plataforma permite a los usuarios filtrar 
                 por fecha, torneo y estadio, ofreciendo un nivel de detalle único para analizar la intensa rivalidad 
-                entre <strong>Gimnasia y Estudiantes</strong>.
+                entre Gimnasia y Estudiantes.
             </p>
             <div class="container-buttons">
               <button class="access-button" onclick="window.location.href='pages/clasicos.html'">INGRESAR</button>
@@ -110,5 +109,6 @@
   <script src="js/proyectos.js"></script>
 </body>
 </html>
+
 
 
