--- a/pages/frasesdeldiego.html
+++ b/pages/frasesdeldiego.html
@@ -2,7 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Frases del Diego</title>
+    <title>Frases de Diego Maradona | Generador de Citas del 10</title>
+
+    <meta name="google-site-verification" content="z2m7ag2pEUyXjUDQVQobjg-SNN3XF5giQDek7cpBkdw" />
+
+    <meta name="description" content="Generador de las frases más icónicas y memorables de Diego Armando Maradona. Descubre una nueva cita del '10' con cada clic.">
+    <meta name="keywords" content="frases de maradona, frases del diego, diego armando maradona, citas maradona, la pelota no se mancha">
+
     <link rel="icon" href="../images/logo.webp" type="image/x-icon">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,4 +61,5 @@
 
 </body>
 </html>
+
 
