--- a/pages/frasesdeldiego.html
+++ b/pages/frasesdeldiego.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Frases de Diego Maradona | Generador de Citas del 10</title>
+    <title>Frases de Diego Maradona | Generador del Diego</title>
 
     <meta name="google-site-verification" content="z2m7ag2pEUyXjUDQVQobjg-SNN3XF5giQDek7cpBkdw" />
 
@@ -61,5 +61,6 @@
 
 </body>
 </html>
+
 
 
