--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta name="google-site-verification" content="z2m7ag2pEUyXjUDQVQobjg-SNN3XF5giQDek7cpBkdw" />
   <!-- ESTILOS NAVBAR -->
   <link rel="stylesheet" type="text/css" href="css/navbar.css">
   <!-- ESTILOS WEB -->
@@ -96,4 +96,5 @@
 </body>
 
 </html> 
+
 
