--- a/proyectos.html
+++ b/proyectos.html
@@ -75,7 +75,7 @@
     
     <div class="rectangulo-negro">
         <div class="proyecto-diego">
-            <h2><a href="pages/frasesdeldiego.html">Frases del D1eg0</a></h2>
+            <h2><a href="pages/frasesdeldiego.html">Frases del Diego | (10)</a></h2>
             <p>El proyecto se centra en mostrar citas aleatorias de Diego Armando Maradona en una página web. Se ha implementado una función en JavaScript que selecciona al azar una de las frases célebres del legendario futbolista argentino y la muestra dinámicamente en un elemento HTML. Estas frases representan expresiones icónicas y memorables del legado de Diego.</p>
             
             <div class="container-buttons">
@@ -109,6 +109,7 @@
   <script src="js/proyectos.js"></script>
 </body>
 </html>
+
 
 
 
