--- a/pages/frasesdeldiego.html
+++ b/pages/frasesdeldiego.html
@@ -24,7 +24,7 @@
     <header>
         <h1>Frases del Diego</h1>
         <nav>
-            <a href="../proyectos.html">Volver a Proyectos</a>
+            <a href="https://oneeyedbastard.github.io/">Volver a Proyectos</a>
         </nav>
     </header>
 
@@ -61,6 +61,7 @@
 
 </body>
 </html>
+
 
 
 
