--- a/pages/moviez.html
+++ b/pages/moviez.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <div class="logo"><a href="../proyectos.html">MOVIEZ</a></div>
+      <div class="logo"><a href="https://oneeyedbastard.github.io/">MOVIEZ</a></div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -78,5 +78,6 @@
         crossorigin="anonymous"></script>
       <script src="../js/moviez.js"></script>
 </body>
+
 
 </html>
