--- a/pages/clasicos.html
+++ b/pages/clasicos.html
@@ -28,7 +28,7 @@
 
 <body>
   <header class="encabezado">
-    <div class="logo"><a href="../proyectos.html" clásico de La Plata>El clásico de La PLata</a></div>
+    <div class="logo"><a href="https://oneeyedbastard.github.io/" clásico de La Plata>El clásico de La PLata</a></div>
     <div class="menu-icon">
       <div class="line1"></div>
       <div class="line2"></div>
@@ -182,5 +182,6 @@
 
   <script src="../js/clasicos.js"></script>
 </body>
+
 
 </html>
