--- a/pages/frasesdeldiego.html
+++ b/pages/frasesdeldiego.html
@@ -27,9 +27,9 @@
 
     <header>
         <h1 class="glitch" data-glitch="FRASES DEL DIEGO">
-            <a href="#inicio">FRASES DEL DIEGO</a>
+            FRASES DEL DIEGO
         </h1>
-        <a href="#biografia" class="icono-navegacion">
+        <a href="https://oneeyedbastard.github.io/" class="icono-navegacion">
             <img src="../images/10.webp" alt="Ir a Biografía" class="menu-icon-img">
         </a>
     </header>
@@ -77,4 +77,5 @@
     <script src="../js/frasesdeldiego.js"></script>
 </body>
 </html>
+
 
